Table users { id bigint [pk, increment] name varchar username varchar [unique] email varchar [unique, null] password varchar status varchar email_verified_at timestamp [null] last_login_at timestamp [null] remember_token varchar [null] created_at timestamp updated_at timestamp }
Table pengaturan_sekolah { id bigint [pk, increment] nama_sekolah varchar npsn varchar [null] alamat text [null] telepon varchar [null] email varchar [null] logo varchar [null] kepala_sekolah_user_id bigint [null, ref: > users.id] created_at timestamp updated_at timestamp }
Table tahun_ajaran { id bigint [pk, increment] nama varchar [unique] tanggal_mulai date tanggal_selesai date status varchar created_at timestamp updated_at timestamp }
Table semester { id bigint [pk, increment] tahun_ajaran_id bigint [ref: > tahun_ajaran.id] nama varchar tanggal_mulai date tanggal_selesai date status varchar created_at timestamp updated_at timestamp Indexes { (tahun_ajaran_id, nama) [unique] } }
Table guru { id bigint [pk, increment] user_id bigint [unique, null, ref: > users.id] nip varchar [unique, null] nuptk varchar [unique, null] nama_lengkap varchar jenis_kelamin varchar [null] tempat_lahir varchar [null] tanggal_lahir date [null] telepon varchar [null] alamat text [null] status varchar created_at timestamp updated_at timestamp }
Table siswa { id bigint [pk, increment] user_id bigint [unique, null, ref: > users.id] nis varchar [unique, null] nisn varchar [unique, null] nama_lengkap varchar jenis_kelamin varchar [null] tempat_lahir varchar [null] tanggal_lahir date [null] alamat text [null] status varchar created_at timestamp updated_at timestamp }
Table kelas { id bigint [pk, increment] tahun_ajaran_id bigint [ref: > tahun_ajaran.id] nama varchar tingkat int wali_kelas_id bigint [null, ref: > guru.id] status varchar created_at timestamp updated_at timestamp Indexes { (tahun_ajaran_id, nama) [unique] } }
Table siswa_kelas { id bigint [pk, increment] siswa_id bigint [ref: > siswa.id] kelas_id bigint [ref: > kelas.id] status varchar created_at timestamp updated_at timestamp Indexes { (siswa_id, kelas_id) [unique] } }
Table mata_pelajaran { id bigint [pk, increment] kode varchar [unique, null] nama varchar [unique] status varchar created_at timestamp updated_at timestamp }
Table jam_pelajaran { id bigint [pk, increment] nama varchar jam_mulai time jam_selesai time urutan int [unique] jenis varchar status varchar created_at timestamp updated_at timestamp }
Table pengajaran { id bigint [pk, increment] semester_id bigint [ref: > semester.id] kelas_id bigint [ref: > kelas.id] mata_pelajaran_id bigint [ref: > mata_pelajaran.id] guru_id bigint [ref: > guru.id] status varchar created_at timestamp updated_at timestamp Indexes { (semester_id, kelas_id, mata_pelajaran_id, guru_id) [unique] } }
Table jadwal_pelajaran { id bigint [pk, increment] pengajaran_id bigint [ref: > pengajaran.id] hari varchar jam_pelajaran_id bigint [ref: > jam_pelajaran.id] created_at timestamp updated_at timestamp Indexes { (pengajaran_id, hari, jam_pelajaran_id) [unique] } }
Table nilai_tugas { id bigint [pk, increment] pengajaran_id bigint [ref: > pengajaran.id] siswa_id bigint [ref: > siswa.id] bulan int minggu int nilai decimal [null] catatan text [null] dibuat_oleh bigint [null, ref: > users.id] created_at timestamp updated_at timestamp Indexes { (pengajaran_id, siswa_id, bulan, minggu) [unique] } }
Table roles { id bigint [pk, increment] name varchar guard_name varchar created_at timestamp updated_at timestamp Indexes { (name, guard_name) [unique] } }
Table permissions { id bigint [pk, increment] name varchar guard_name varchar created_at timestamp updated_at timestamp Indexes { (name, guard_name) [unique] } }
Table model_has_roles { role_id bigint [ref: > roles.id] model_type varchar model_id bigint Indexes { (role_id, model_id, model_type) [pk] } }
Table model_has_permissions { permission_id bigint [ref: > permissions.id] model_type varchar model_id bigint Indexes { (permission_id, model_id, model_type) [pk] } }
Table role_has_permissions { permission_id bigint [ref: > permissions.id] role_id bigint [ref: > roles.id] Indexes { (permission_id, role_id) [pk] } }
